--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-    "name": "boilerplate-babel-webpack",
-    "version": "1.0.5",
-    "description": "Starter with Babel.js and Webpack",
+    "name": "vt-neural-network",
+    "version": "0.0.1",
+    "description": "A example neural network",
     "license": "MIT",
     "author": {
-        "name": "Piotr Kowalski",
-        "email": "piecioshka@gmail.com",
-        "url": "https://piecioshka.pl"
+        "name": "rafinskipg",
+        "email": "rafinskipg@gmail.com",
+        "url": "https://github.com/rafinskipg"
     },
+    "main": "./public/dist/main.bundle.js",
     "scripts": {
         "audit": "source-map-explorer public/dist/main.bundle.js",
         "clear": "rm -rf public/dist/",
@@ -15,27 +16,33 @@
         "count": "find src -name '*.js' | xargs wc -l | sort -r",
         "build": "webpack",
         "watch": "webpack -w",
-        "start": "node public/dist/main.bundle.js"
+        "start": "node public/dist/main.bundle.js",
+        "test": "jest --env=node"
     },
+    "keywords": [
+        "ai",
+        "artificial-intelligence",
+        "neural network",
+        "nn",
+        "feed forward",
+        "neural network",
+        "classifier",
+        "neural",
+        "network",
+        "neural-networks",
+        "machine-learning",
+        "synapse",
+        "time series",
+        "time step",
+        "prediction"
+    ],
     "devDependencies": {
         "@babel/core": "^7.3.4",
         "@babel/preset-env": "^7.3.4",
         "babel-loader": "^8.0.5",
+        "jest": "^24.9.0",
         "source-map-explorer": "^1.7.0",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.2.3"
-    },
-    "keywords": [
-        "webpack",
-        "babel",
-        "starter",
-        "source map",
-        "explorer",
-        "count",
-        "loc"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/piecioshka/boilerplate-babel-webpack"
     }
 }
